# multimodal-3d-image-segmentation

./: .gitignore  README.md  pyproject.toml  readme.md  troubleshooting.md
experiments/: inference.py  metrics.py  run.py  train_test.py  utils.py
experiments/brats23_data_preparation/: partitioning.py
experiments/brats23_data_preparation/config_files/: config_partitioning.ini
experiments/brats23_data_preparation/split_examples/: seg_test-0.3.txt  seg_train-0.6.txt  seg_valid-0.1.txt  t1c_test-0.3.txt  t1c_train-0.6.txt  t1c_valid-0.1.txt  t1n_test-0.3.txt  t1n_train-0.6.txt  t1n_valid-0.1.txt  t2f_test-0.3.txt  t2f_train-0.6.txt  t2f_valid-0.1.txt  t2w_test-0.3.txt  t2w_train-0.6.txt  t2w_valid-0.1.txt
experiments/config_files/: config_fno.ini  config_fnoseg.ini  config_hartleymha.ini  config_hnoseg.ini  config_hnoseg_xs.ini  config_inference_fnoseg.ini  config_inference_hartleymha.ini  config_vnet-ds.ini
experiments/data_io/: datagenerator.py  input_data.py
nets/: __init__.py  architectures.py  custom_losses.py  custom_objects.py  dht.py  fourier_operator.py  hartley_mha.py  hartley_operator.py  hnosegxs.py  nets_utils.py
tensorflow/: readme.md
tensorflow/experiments/: train_test.py
tensorflow/experiments/config_files/: config_fno.ini  config_fnoseg.ini  config_hartleymha.ini  config_inference_fno.ini  config_inference_hnoseg.ini  config_inference_vnet-ds.ini
tensorflow/experiments/data_io/: dataset.py
tensorflow/experiments/data_split/: partitioning.py
tensorflow/nets/: __init__.py  custom_losses.py  hartley_operator.py  nets_utils.py
(+15 files in other folders)
